--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
 }
 input {
   margin: 10px;
-  text-decoration-color:  palevioletred;
 }
 .main{
   text-align: center;
@@ -42,4 +41,5 @@ input {
 }
 #contact{
   float: right;
+  padding-right: 10px;
 }
